--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@
 *.tar.gz
 *.rar
 
+# Image files
+*.jpg
+*.jpeg
+*.png
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
