--- a/examservlet/src/main/webapp/WEB-INF/web.xml
+++ b/examservlet/src/main/webapp/WEB-INF/web.xml
@@ -76,4 +76,72 @@
     <servlet-name>MemberListServlet2</servlet-name>
     <url-pattern>/emp/list.do/id</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>Mvc</display-name>
+    <servlet-name>mvcinsert</servlet-name>
+    <servlet-class>member.mvc.MemberInsertServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>mvcinsert</servlet-name>
+    <url-pattern>/mvc/insert</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <servlet-name>mvclist</servlet-name>
+    <servlet-class>member.mvc.MemberListServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>mvclist</servlet-name>
+    <url-pattern>/mvc/list</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <servlet-name>mvcdelete</servlet-name>
+    <servlet-class>member.mvc.MemberDeleteServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>mvcdelete</servlet-name>
+    <url-pattern>/mvc/delete</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>login</display-name>
+    <servlet-name>login</servlet-name>
+    <servlet-class>member.mvc.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/mvc/login</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>userRead</display-name>
+    <servlet-name>mvcread</servlet-name>
+    <servlet-class>member.mvc.MemberReadServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>mvcread</servlet-name>
+    <url-pattern>/mvc/read</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>search</display-name>
+    <servlet-name>mvcsearch</servlet-name>
+    <servlet-class>member.mvc.MemberSearchServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>mvcsearch</servlet-name>
+    <url-pattern>/mvc/search</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>logout</display-name>
+    <servlet-name>logout</servlet-name>
+    <servlet-class>member.mvc.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>logout</servlet-name>
+    <url-pattern>/mvc/logout</url-pattern>
+  </servlet-mapping>
 </web-app>
