--- a/.gitignore
+++ b/.gitignore
@@ -94,5 +94,6 @@ local.properties
 # Spring Boot Tooling
 .sts4-cache/
 *.MF
+*.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse
